--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Elite</title>
     <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/lucide-react@0.263.1/font.css" rel="stylesheet">
+</head>
+<body class="min-h-screen bg-gradient-to-br from-gray-900 via-gray-800 to-gray-900">
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
-  </body>
+    
+    <script type="text/babel">
+        const { useState, useEffect } = React;
+        const { Calendar, Clock, Users, Scissors, CheckCircle, User } = lucide-react;
+        
+        // TODO: Aqui vai todo o seu código React convertido
+        // Vou te passar o código completo em seguida
+    </script>
+</body>
 </html>
