--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/lucide-react@0.263.1/font.css" rel="stylesheet">
+    <style>
+        /* Estilos para os ícones */
+        .lucide { width: 1em; height: 1em; stroke: currentColor; }
+    </style>
 </head>
 <body class="min-h-screen bg-gradient-to-br from-gray-900 via-gray-800 to-gray-900">
     <div id="root"></div>
     
     <script type="text/babel">
-        const { useState, useEffect } = React;
-        const { Calendar, Clock, Users, Scissors, CheckCircle, User } = lucide-react;
-        
-        // TODO: Aqui vai todo o seu código React convertido
-        // Vou te passar o código completo em seguida
+        // TODO: Aqui vai o código da barbearia
+        // Vou te passar em seguida
     </script>
 </body>
 </html>
